zlib: check that macro is defined before referencing it

Although undefined macros evaluate as 0 it becomes an error when
compiling with -Werror,-Wundef as we do.

PR:		262977